--- a/src/main/resources/templates/previewFile.html
+++ b/src/main/resources/templates/previewFile.html
@@ -28,7 +28,7 @@
 </head>
 <body class="gray-bg">
 <div class="wrapper wrapper-content animated fadeInRight">
-    <div class="panel panel-default">
+    <!-- <div class="panel panel-default">
         <div class="panel-body form-group" style="margin-bottom:0px;background-color: #b3b3b3">
             <div class="col-sm-12">
                 <a type="button" class="btn btn-primary"  onclick="back();"><i class="glyphicon glyphicon-chevron-left"></i>&nbsp;返回</a>
@@ -41,7 +41,7 @@
                 <span style="font-size: 20px;text-align: center;">[[${fileName}]]</span>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="panel panel-default">
         <div class="panel-body form-group" style="margin-bottom:0px;">
             <div class="col-sm-12" id="showPic">
