--- a/src/main/resources/templates/share.html
+++ b/src/main/resources/templates/share.html
@@ -143,9 +143,9 @@
 
 
 <script type="text/javascript">
-    $(function () {
+    /*$(function () {
         $('#myTab a:first').tab('show');
-    });
+    });*/
 
     $("#tableShare").bootstrapTable({ // 对应table标签的id
         method:'POST',
