--- a/src/main/resources/templates/createNDA.html
+++ b/src/main/resources/templates/createNDA.html
@@ -121,7 +121,7 @@
                 url:'/upload',
                 method: "post",  //也可用put
                 paramName: "file",
-                maxFilesize: 1000.0, // 上传的文件大小
+                maxFilesize: 100.0, // 上传的文件大小
                 maxFiles:1,//一次性上传的文件数量上限
                 acceptedFiles: ".pdf",
                 addRemoveLinks : true,//添加移除文件
@@ -146,7 +146,8 @@
                     //上传文件成功时触发的事件
                     this.on("success", function(file,data) {
                         signFileName = "";
-                        signFileName = data[0];
+                        if (null != data && "" != data)
+                            signFileName = data[0];
                         $("#haveFile").val(signFileName)
 
                     });
