--- a/src/main/resources/templates/findPassword.html
+++ b/src/main/resources/templates/findPassword.html
@@ -207,7 +207,7 @@
             data:{
                 phone:phone,
             },
-            dateType:"json",
+            dataType:"json",
             success:function(result) {
                 if(result.indexOf("error")!=-1) {
                     $("#errorPhone").show();
