将其中出现的一个共性问题：ajax中的dateType更正为datatype

--- a/src/main/resources/templates/company/register.html
+++ b/src/main/resources/templates/company/register.html
@@ -254,7 +254,7 @@
             data:{
                 phone : phone,
             },
-            dataType:"json",
+            datatype:"json",
             success:function(result) {
                 $("#checkCode").val(result);
             }
