--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -247,7 +247,7 @@
             data:{
                 phone : phone,
             },
-            dataType:"json",
+            datatype:"json",
             success:function(result) {
                 $("#checkCode").val(result);
             }
