--- a/src/main/resources/templates/company/main.html
+++ b/src/main/resources/templates/company/main.html
@@ -113,7 +113,7 @@
             data:{
                 id : node.id,
             },
-            dataType:"html",
+            datatype:"html",
             success:function(result) {
                 $("#modal-detail-user").modal("hide");
                 $("#modal-update-user-body").html(result);
@@ -142,7 +142,7 @@
                 phoneno: phoneno,
                 email: email
             },
-            dataType: "json",
+            datatype: "json",
             success: function (result) {
                 $("#modal-update-user").modal("hide");
             }
@@ -155,7 +155,7 @@
             data:{
                 id : node.id,
             },
-            dataType:"html",
+            datatype:"html",
             success:function(result) {
                 $("#modal-detail-user-body").html(result);
                 $("#modal-detail-user").modal("show");
@@ -178,7 +178,7 @@
                 id : id,
                 password : password
             },
-            dataType:"json",
+            datatype:"json",
             success:function(result) {
                 alert("修改成功,将跳转到登录页");
                 window.top.location.href="/company/login";
