将其中出现的一个共性问题：ajax中的dateType更正为datatype

--- a/src/main/resources/templates/company/findPassword.html
+++ b/src/main/resources/templates/company/findPassword.html
@@ -207,7 +207,7 @@
             data:{
                 phone:phone,
             },
-            datatype:"json",
+            dataType:"json",
             success:function(result) {
                 if(result.indexOf("error")!=-1) {
                     $("#errorPhone").show();
