--- a/src/main/resources/templates/company/register.html
+++ b/src/main/resources/templates/company/register.html
@@ -254,7 +254,7 @@
             data:{
                 phone : phone,
             },
-            datatype:"json",
+            dataType:"json",
             success:function(result) {
                 $("#checkCode").val(result);
             }
