--- a/src/main/resources/templates/ipfs.html
+++ b/src/main/resources/templates/ipfs.html
@@ -112,7 +112,7 @@
                             data:{
                                 fileName:file.name,
                             },
-                            datatype:"json",
+                            dataType:"json",
                             success:function(result) {
                                 console.log(result);
                             }
