--- a/src/main/resources/templates/preview.html
+++ b/src/main/resources/templates/preview.html
@@ -50,7 +50,7 @@
             $.ajax({
                 async: false,
                 type: "post",
-                datatype: "json",
+                dataType: "json",
                 url: "previewAction?onlineType=previw",
                 data:{
                     ftpFileName:"test2003.doc"
@@ -77,7 +77,7 @@
             $.ajax({
                 async: false,
                 type: "post",
-                datatype: "json",
+                dataType: "json",
                 url: "previewAction?onlineType=previw",
                 data:{
                     ftpFileName:"test2007.docx"
@@ -102,7 +102,7 @@
             $.ajax({
                 async: false,
                 type: "post",
-                datatype: "json",
+                dataType: "json",
                 url: "previewAction?onlineType=previw",
                 data:{
                     ftpFileName:"test2003.xls"
@@ -127,7 +127,7 @@
             $.ajax({
                 async: false,
                 type: "post",
-                datatype: "json",
+                dataType: "json",
                 url: "previewAction?onlineType=previw",
                 data:{
                     ftpFileName:"test2007.xlsx"
@@ -152,7 +152,7 @@
             $.ajax({
                 async: false,
                 type: "post",
-                datatype: "json",
+                dataType: "json",
                 url: "previewAction?onlineType=previw",
                 data:{
                     ftpFileName:"test.pdf"
@@ -177,7 +177,7 @@
             $.ajax({
                 async: false,
                 type: "post",
-                datatype: "json",
+                dataType: "json",
                 url: "previewAction?onlineType=previw",
                 data:{
                     ftpFileName:"test.png"
@@ -202,7 +202,7 @@
             $.ajax({
                 async: false,
                 type: "post",
-                datatype: "json",
+                dataType: "json",
                 url: "previewAction?onlineType=previw",
                 data:{
                     ftpFileName:"test.jpg"
@@ -227,7 +227,7 @@
             $.ajax({
                 async: false,
                 type: "post",
-                datatype: "json",
+                dataType: "json",
                 url: "previewAction?onlineType=previw",
                 data:{
                     ftpFileName:"test.jpeg"
@@ -252,7 +252,7 @@
             $.ajax({
                 async: false,
                 type: "post",
-                datatype: "json",
+                dataType: "json",
                 url: "previewAction?onlineType=previw",
                 data:{
                     ftpFileName:"test.txt"
@@ -277,7 +277,7 @@
             $.ajax({
                 async: false,
                 type: "post",
-                datatype: "json",
+                dataType: "json",
                 url: "getFileNameList",
                 success:function(data){
                     $.each(data, function(index, value) {
