--- a/src/main/resources/templates/share.html
+++ b/src/main/resources/templates/share.html
@@ -374,7 +374,7 @@
             data:{
                 ndaid : node.name,
             },
-            datatype:"html",
+            dataType:"html",
             success:function(result) {
                 $("#modal-show-NDA-body").html(result);
                 $("#modal-show-NDA").modal("show");
@@ -390,7 +390,7 @@
             data:{
                 ndaid : node.name,
             },
-            datatype:"html",
+            dataType:"html",
             success:function(result) {
                 $("#modal-show-NDA-body").html(result);
                 $("#modal-show-NDA").modal("show");
@@ -406,7 +406,7 @@
             data:{
                 ndaid : node.name,
             },
-            datatype:"json",
+            dataType:"json",
             success:function(result) {
                 searchShare();
                 $("#modal-show-NDA").modal("hide");
@@ -421,7 +421,7 @@
             data:{
                 ndaid : node.name,
             },
-            datatype:"json",
+            dataType:"json",
             success:function(result) {
                 searchShare();
                 $("#modal-show-NDA").modal("hide");
@@ -436,7 +436,7 @@
             data:{
                 ndaid : node.name,
             },
-            datatype:"json",
+            dataType:"json",
             success:function(result) {
                 searchShare();
                 $("#modal-show-NDA").modal("hide");
@@ -451,7 +451,7 @@
             data:{
                 ndaid : node.name,
             },
-            datatype:"html",
+            dataType:"html",
             success:function(result) {
                 $("#modal-show-NDA").modal("hide");
                 $("#modal-update-NDA-body").html(result);
@@ -471,7 +471,7 @@
                 ndaitems:value,
                 id:node.name,
             },
-            datatype:"json",
+            dataType:"json",
             success:function(result) {
                 searchShare();
                 $("#modal-update-NDA").modal("hide");
