--- a/src/main/resources/templates/findPsd.html
+++ b/src/main/resources/templates/findPsd.html
@@ -135,7 +135,7 @@
                 data:{
                     phone:phone,
                 },
-                datatype:"json",
+                dataType:"json",
                 success:function(result) {
                     if(result.indexOf("error")!=-1) {
                         $("#errorPhone").show();
