--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -169,7 +169,7 @@
             data:{
                 id : node.id,
             },
-            datatype:"html",
+            dataType:"html",
             success:function(result) {
                 $("#modal-detail-user").modal("hide");
                 $("#modal-update-user-body").html(result);
@@ -198,7 +198,7 @@
                 phoneno: phoneno,
                 email: email
             },
-            datatype: "json",
+            dataType: "json",
             success: function (result) {
                 $("#modal-update-user").modal("hide");
             }
@@ -211,7 +211,7 @@
             data:{
                 id : node.id,
             },
-            datatype:"html",
+            dataType:"html",
             success:function(result) {
                 $("#modal-detail-user-body").html(result);
                 $("#modal-detail-user").modal("show");
@@ -234,7 +234,7 @@
                 id : id,
                 password : password
             },
-            datatype:"json",
+            dataType:"json",
             success:function(result) {
                 alert("修改成功,将跳转到登录页");
                 window.top.location.href="/login";
