--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -63,7 +63,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="J_menuItem" href="/NDAList">
+                    <a class="J_menuItem" href="/ndatemplates">
                         <i class="fa fa fa-file-archive-o"></i>
                         <span class="nav-label">NDA模板</span>
                     </a>
